Initialize class strings to empty; Ensure messages are logged to file if one is defined before adding them to a queue; Fix incorrect calls to ConcurrentDictionary; Only call Write-Progress if Id and Activity are present and Activity is non-empty, and always check for record removal; Use regular Write-* calls when reporting errors; Update Process-Mp3Files testing script to use Write-* calls where needed and use the class Progress method otherwise; Ensure that Receive-Job is called to show any output generated by individual jobs; Update Test task to remove and re-import module before invoking Pester

--- a/.gitignore
+++ b/.gitignore
@@ -87,5 +87,11 @@ fabric.properties
 # IDEA project files
 *.iml
 
+# IDEA Settings
+.idea/
+
 # VSCode files
 .vscode/
+
+# Log files from testing
+hack/*.Log
